--- a/IT 常用算法/排序算法/快速排序.md
+++ b/IT 常用算法/排序算法/快速排序.md
@@ -1,5 +1,10 @@
 # 快速排序
+https://cloud.tencent.com/developer/article/1693982  
+快速排序（Quicksort）是对冒泡排序的一种改进
+
 ![](https://upload-images.jianshu.io/upload_images/2463290-5bd80beb2b448d53.gif?imageMogr2/auto-orient/strip|imageView2/2/w/811/format/webp)
+
+
 ![](../../z-resources/images/IM20210303104705.jpg)
 
 ```java
